--- a/post-page.html
+++ b/post-page.html
@@ -42,7 +42,7 @@
 
     <!--Blogs-->
     <section class="blog-content blog-container">
-        <h2 class="sub-heading" id="sub-heading">Test React Project</h2>
+        <h2 class="sub-heading" id="sub-heading"></h2>
         <p class="blog-text" id="blog-text"></p>
        
         
